# whittler

./: .gitignore  LICENSE  README.md  USAGE.md  bead_process.md  pyproject.toml  whittler.yaml.example
docker/: Dockerfile  entrypoint.sh
tests/: __init__.py  test_beads.py  test_cli.py  test_containers.py  test_core.py  test_git.py  test_orchestrator.py
tests/integration/: Dockerfile.test  mock_bd.sh  test_e2e.py  test_solver.sh
whittler/: __init__.py  beads.py  cli.py  containers.py  core.py  git.py  orchestrator.py
