[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "whittler"
version = "0.1.0"
description = "An orchestrator for managing distributed work using Claude Code agents"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Whittler Contributors" }]

dependencies = [
    "pyyaml",
    "docker",
    "beads-mcp @ file:///home/kmcbeth/go/pkg/mod/github.com/steveyegge/beads@v0.59.0/integrations/beads-mcp",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-asyncio",
]

[project.scripts]
whittler = "whittler.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["whittler*"]
