[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "whittler"
version = "0.1.0"
description = "An orchestrator for managing distributed work using Claude Code agents"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Whittler Contributors" }]

dependencies = [
    "pyyaml",
    "docker",
    # NOTE: beads-mcp is sourced from the local Go module cache on this machine.
    # Install beads (https://github.com/steveyegge/beads) to populate this path,
    # or update this path to point to your local beads checkout.
    "beads-mcp @ file:///home/kmcbeth/go/pkg/mod/github.com/steveyegge/beads@v0.59.0/integrations/beads-mcp",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-asyncio",
]

[project.scripts]
whittler = "whittler.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["whittler*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
