[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "whittler"
version = "0.1.0"
description = "An orchestrator for managing distributed work using Claude Code agents"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Whittler Contributors" }]

dependencies = [
    "pyyaml",
    "docker",
    # beads-mcp is installed from your local beads checkout.
    # Before running `pip install -e .`, install beads and find the path:
    #   go install github.com/steveyegge/beads/cmd/bd@latest
    #   export BEADS_MCP_PATH=$(go env GOPATH)/pkg/mod/github.com/steveyegge/beads@v0.59.0/integrations/beads-mcp
    # Then update the path below to match your local Go module cache, and run: pip install -e .
    # If go env GOPATH is empty, it defaults to ~/go.
    "beads-mcp @ file:///home/kmcbeth/go/pkg/mod/github.com/steveyegge/beads@v0.59.0/integrations/beads-mcp",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-asyncio",
]

[project.scripts]
whittler = "whittler.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["whittler*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
